--- a/index-demo.html
+++ b/index-demo.html
@@ -24,55 +24,66 @@
 						<div class="content">
 							<h1>Story</h1>
 							<p class="major"> My name is Eduardo Jonthan Munoz and i am an inspired web Developer , i have been coding since 2018 currently based in North Carolina and Looking for work in the web Development Field .</p>
-							<p>This is a <strong>Banner</strong> element, and it's generally used as an introduction or opening statement. You can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-banner">details</a>).</p>
+							<p>I don’t like to define myself by the work I’ve done. I define myself by the work I want to do. Skills can be taught, personality is inherent. I prefer to keep learning, continue challenging myself, and do interesting things that matter.</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button large wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#first" class="button large wide smooth-scroll-middle">About Me</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/Raleigh (1).jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Spotlight -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Spotlight</h2>
-							<p>This is a <strong>Spotlight</strong> element, and it's generally used &ndash; as its name implies &ndash; to spotlight a particular feature, subject, or pretty much whatever. You can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-spotlight">details</a>).</p>
+							<h2>About Me</h2>
+							<p>My abundant energy fuels me in the pursuit of many interests, hobbies, areas of study and artistic endeavors. I’m a fast learner, able to pick up new skills and juggle different projects and roles with relative ease. I like to develop expertise in a number of areas over the course of my life and career.</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/about.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Spotlight -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Spotlight</h2>
-							<p>This is also a <strong>Spotlight</strong> element, and it's here because this demo would look a bit empty with just one spotlight. Like all spotlights, you can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-spotlight">details</a>).</p>
+							<h2>My goals</h2>
+							<p> I aim to become a Full stack web Developer and land my dream job as a software Engenieer  i wish to be part of this amazing industry and create things that can change people`s lives </p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/goals.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Spotlight -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Spotlight</h2>
-							<p>And yes, this is another <strong>Spotlight</strong> element, and it's also here because I need to fill a bit of space. Naturally, like any other spotlight, you can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-spotlight">details</a>).</p>
+							<h2>Skills</h2>
+							<ul>
+								<li> Efficient and effective communication skills </li>
+								<li>Great time managment for faster and efficient work</li>
+								<li>team Player</li>
+								<li>passion and hunger for excellence</li>
+								<li> motivated to take new challenges</li>
+								<li> Ability to work and juggle between multiple projects</li>
+								<li> Great storytelling and collaboration skills</li>
+								<p> and more </p>
+								
+
+							</ul>	
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/skills.jpg" alt="" />
 						</div>
 					</section>
 
