--- a/index-demo.html
+++ b/index-demo.html
@@ -23,7 +23,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Story</h1>
-							<p class="major"> My name is Eduardo Jonthan Munoz and i am an inspired web Developer , i have been coding since 2018 currently based in North Carolina and Looking for work in the web Development Field .</p>
+							<p class="major"> My name is Eduardo Jonathan Munoz and i am an inspired web Developer , i have been coding since 2018 currently based in North Carolina and Looking for work in the web Development Field .</p>
 							<p>I don’t like to define myself by the work I’ve done. I define myself by the work I want to do. Skills can be taught, personality is inherent. I prefer to keep learning, continue challenging myself, and do interesting things that matter.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button large wide smooth-scroll-middle">About Me</a></li>
@@ -91,18 +91,17 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Gallery</h2>
-							<p>This is a <strong>Gallery</strong> element. It can behave as a lightbox (when given the <code>lightbox</code> class), and you can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-gallery">details</a>).</p>
+							<p>This is my <strong> gallery </strong> where i showcase some of my skills as a Web Developer  please click the links to see my Projects !</p>
 						</div>
 
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
+									<a href="https://github.com/Johnjohnn/User-Interface " target="_blank" class="image">
 										<img src="images/gallery/thumbs/01.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Title</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>User Interface Project</h3>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -113,39 +112,38 @@
 										<img src="images/gallery/thumbs/02.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Title</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Flexbox</h3>
+								
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
+									<a href="https://github.com/Johnjohnn/UI-III-Flexbox" target="_blank" class="image">
 										<img src="images/gallery/thumbs/03.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Title</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Responsive Web Design</h3>
+									
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="https://github.com/Johnjohnn/responsive-web-design-I" target="_blank" class="image">
 										<img src="images/gallery/thumbs/04.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Title</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Git for Web Development</h3>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
+									<a href="https://github.com/Johnjohnn/Git-for-Web-Development-Project" target="_blank" class="image">
 										<img src="images/gallery/thumbs/05.jpg" alt="" />
 									</a>
 									<div class="caption">
