--- a/index-demo.html
+++ b/index-demo.html
@@ -108,7 +108,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="https://github.com/Johnjohnn/Git-for-Web-Development-Project" class="image">
+									<a href="https://github.com/Johnjohnn/Git-for-Web-Development-Project"  target="_blank"class="image">
 				            
 										<img src="images/gallery/thumbs/02.jpg" alt="" />
 									</a>
